--- a/scenic.html
+++ b/scenic.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 
-<h1>This is a Heading WOW!!!</h1>
-<p>This is a paragraph.</p>
+<script>
+  location.replace("https://www.w3schools.com")
+</script>
   
 </body>
 </html>
