--- a/scenic.html
+++ b/scenic.html
@@ -6,7 +6,7 @@
 <body>
 
 <script>
-  location.replace("https://www.w3schools.com")
+  location.replace("https://685ee897-88fc-427c-9478-e84b75c634f6-00-2aa6o6h46iw9h.picard.replit.dev/")
 </script>
   
 </body>
